--- a/services/web/Dockerfile
+++ b/services/web/Dockerfile
@@ -14,9 +14,14 @@ FROM node:20-slim AS runner
 WORKDIR /app
 ENV NODE_ENV=production
 ENV NEXT_TELEMETRY_DISABLED=1
+
+RUN useradd -m -u 10001 nextjs
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/package.json ./package.json
 COPY --from=builder /app/node_modules ./node_modules
+
+RUN chown -R nextjs:nextjs /app
+USER nextjs
 EXPOSE 3000
 CMD ["npm", "run", "start", "--", "-p", "3000", "-H", "0.0.0.0"]
